# yuubi

./: .clang-format  .gitignore  .gitmodules  .ignore  CMakeLists.txt  CMakePresets.json  README.md  build.bat  format.bat  vcpkg.json
shaders/: bindless.glsl  brdflut.frag  compile.bat  cubemap.frag  cubemap.vert  depth.frag  depth.vert  irradiance.frag  material.glsl  mesh.frag  mesh.vert  prefilter.frag  push_constants.glsl  scene_data.glsl  screen_quad.frag  screen_quad.vert  shader.frag  shader.vert  skybox.frag  skybox.vert  ssao.frag  texture.glsl  vertex.glsl
src/: CMakeLists.txt  application.cpp  application.h  application.ixx  key_codes.h  log.cpp  log.h  main.cpp  mouse_codes.h  pch.h  window.cpp  window.h  window.ixx  yuubi.ixx
src/core/: README.md  log.h  ref.h  util.h
src/core/io/: file.cpp  file.h  image.cpp  image.h
src/event/: base.ixx  dispatcher.ixx  enums.ixx  event.h  event.ixx  key.ixx  key_codes.ixx  key_event.h  mouse_event.h  window.ixx  window_event.h
src/renderer/: bindless_set_manager.cpp  bindless_set_manager.h  camera.cpp  camera.h  depth_pass.cpp  descriptor_allocator.cpp  descriptor_allocator.h  descriptor_layout_builder.cpp  descriptor_layout_builder.h  device.cpp  device.h  device_selector.cpp  device_selector.h  gpu_data.h  image_manager.h  imgui_manager.cpp  imgui_manager.h  immediate_command_executor.cpp  immediate_command_executor.h  instance.cpp  instance.h  loaded_gltf.cpp  loaded_gltf.h  material.h  pipeline_builder.cpp  pipeline_builder.h  push_constants.h  render_object.cpp  render_object.h  renderer.cpp  renderer.h  timestamp.h  vertex.cpp  vertex.h  viewport.cpp  viewport.h  vulkan_usage.cpp  vulkan_usage.h
src/renderer/gltf/: asset.cpp  asset.h  mikktspace.cpp  mikktspace.h  thread.cpp  thread.h
src/renderer/passes/: ao_pass.cpp  ao_pass.h  blur_pass.cpp  blur_pass.h  brdflut_pass.cpp  brdflut_pass.h  composite_pass.cpp  composite_pass.h  cubemap_pass.cpp  cubemap_pass.h  depth_pass.h  (+10 more)
src/vkutils/: context.cpp  context.h  device.cpp  device.h  viewport.cpp  viewport.h  vulkan_usage.cpp  vulkan_usage.h
src/vulkan/: instance.cpp  instance.h
(+26 files in other folders)
